# paperdollop

./: Cargo.toml  README.md  requirements.txt  settings.json  settings.schema.json
.github/workflows/: rust.yml
assets/: settings.json
src/: cli.rs  image_editing.rs  main.rs
