[package]
name = "paperdollop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
conv = "0.3.3"
image = "0.24.7"
imageproc = "0.23.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
